--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">Hello, World!</div>
 </body>
 <script>
-  require('./lib/index')
+  require('./index')
 </script>
 
 </html>
